Update index.html to use stlite version 0.83.0 and refactor script for mounting

--- a/src/index.html
+++ b/src/index.html
@@ -10,23 +10,27 @@
     <title>Stlite App</title>
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/@stlite/browser@0.85.1/build/stlite.css"
+      href="https://cdn.jsdelivr.net/npm/@stlite/browser@0.83.0/build/stlite.css"
     />
-    <script
-      type="module"
-      src="https://cdn.jsdelivr.net/npm/@stlite/browser@0.85.1/build/stlite.js"
-    ></script>
   </head>
   <body>
-    <streamlit-app>
-      <script>
-        async function fetchData() {
-          const response = await fetch('app.py');
-          const data = await response.text();
-          document.querySelector('streamlit-app').innerText = data;
-        }
-        fetchData();
-      </script>
-    </streamlit-app>
+    <div id="root"></div>
+    <script type="module">
+      import { mount } from "https://cdn.jsdelivr.net/npm/@stlite/browser@0.83.0/build/stlite.js";
+      mount(
+        {
+          requirements: ["requests", "plotly", "pandas", "numpy", "scipy"], // Packages to install
+          entrypoint: "app.py", // The target file of the `streamlit run` command
+            files: {
+              "app.py": await (await fetch("app.py")).text(),
+          },
+          streamlitConfig: {
+            // Streamlit configuration
+            "client.toolbarMode": "viewer",
+          },
+        },
+        document.getElementById("root"),
+      );
+    </script>
   </body>
 </html>
