--- a/index.html
+++ b/index.html
@@ -1,19 +1,36 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>加密波動分析工具</title>
-    <script type="module">
-      import { mount } from "https://esm.run/stlite";
-
-      const appPy = await fetch("app.py").then(res => res.text());
-      mount({
-        entrypoint: "app.py",
-        files: {
-          "app.py": appPy,
-        }
-      });
-    </script>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <title>Stlite App</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@stlite/browser@0.83.0/build/stlite.css"
+    />
   </head>
-  <body></body>
+  <body>
+    <div id="root"></div>
+    <script type="module">
+      import { mount } from "https://cdn.jsdelivr.net/npm/@stlite/browser@0.83.0/build/stlite.js";
+      mount(
+        {
+          requirements: ["requests", "plotly", "pandas", "numpy", "scipy"], // Packages to install
+          entrypoint: "app.py", // The target file of the `streamlit run` command
+            files: {
+              "app.py": await (await fetch("app.py")).text(),
+          },
+          streamlitConfig: {
+            // Streamlit configuration
+            "client.toolbarMode": "viewer",
+          },
+        },
+        document.getElementById("root"),
+      );
+    </script>
+  </body>
 </html>
